--- a/main.css
+++ b/main.css
@@ -2,15 +2,18 @@
   display: grid;
   grid-template-rows: repeat(5, 1fr);
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 50px;
+  grid-gap: 40px;
+  background-color: rgba(0, 0, 0, 0);
+  margin: 20px;
 }
 
 .cell {
   border: 1px solid black;
-  background-color: lightgray;
+  border-radius: 16px;
 }
 
 .title {
   justify-content: center;
   display: flex;
+  margin: 4px;
 }
